tools/tests/errors/surf_num_16.ki
# determinant of a non-square matrix must raise.
var m = import("matrix")
discard m.Matrix([[1, 2, 3], [4, 5, 6]]).determinant()
